--- a/art/april-2020.html
+++ b/art/april-2020.html
@@ -38,7 +38,7 @@ title: Art Gallery
                 {% include image-caption.html imageurl="/assets/images/posts/aucasaurus.png#wide" title="Aucasaurus" caption="Aucasaurus in the colors of Tigrex, a fictional creature from the Monster Hunter franchise." %}
             </ul>
             <div>
-                <a href="/art/index">Back to Newer</a>
+                <a href="/art/may-2020">Back to Newer</a>
                 <a href="/art/alphabestiary">Older Art</a>
             </div><!-- .post-tags -->
         </div><!-- .entry-box -->
