added psittaco pic

--- a/art/index.html
+++ b/art/index.html
@@ -22,6 +22,8 @@ title: Art Gallery
                 {% include image-caption.html imageurl="/assets/images/posts/kings.png#wide" title="Kings of the Cretaceous" caption="Quetzalcoatlus, Mosasaurus, and Alamosaurus." %}
                 
                 {% include image-caption.html imageurl="/assets/images/posts/claws.png#wide" title="Claws" caption="Large clawed herbivores throughout history: Nothronychus, Anisodon, Megalonyx, and giant panda." %}
+
+                {% include image-caption.html imageurl="/assets/images/posts/gracili.png#wide" title="Graciliraptor" caption="Graciliraptor, the small microraptorine from Yixian, floofs itself against a drizzle." %}
             </ul>
             <div>
                 <a href="/art/may-2020">Older Art</a>
