--- a/art/index.html
+++ b/art/index.html
@@ -24,6 +24,8 @@ title: Art Gallery
                 {% include image-caption.html imageurl="/assets/images/posts/claws.png#wide" title="Claws" caption="Large clawed herbivores throughout history: Nothronychus, Anisodon, Megalonyx, and giant panda." %}
 
                 {% include image-caption.html imageurl="/assets/images/posts/gracili.png#wide" title="Graciliraptor" caption="Graciliraptor, the small microraptorine from Yixian, floofs itself against a drizzle." %}
+
+                {% include image-caption.html imageurl="/assets/images/posts/dromaeopodus.png#wide" title="Dromaeopodus" caption="Dromaeopodus is the name of a footprint fossil from Early Cretaceous China.  Here, the track-maker shows off its toe beans." %}
             </ul>
             <div>
                 <a href="/art/may-2020">Older Art</a>
