--- a/art/index.html
+++ b/art/index.html
@@ -26,6 +26,8 @@ title: Art Gallery
                 {% include image-caption.html imageurl="/assets/images/posts/gracili.png#wide" title="Graciliraptor" caption="Graciliraptor, the small microraptorine from Yixian, floofs itself against a drizzle." %}
 
                 {% include image-caption.html imageurl="/assets/images/posts/dromaeopodus.png#wide" title="Dromaeopodus" caption="Dromaeopodus is the name of a footprint fossil from Early Cretaceous China.  Here, the track-maker shows off its toe beans." %}
+
+                {% include image-caption.html imageurl="/assets/images/posts/prot.png#wide" title="Protarchaeopteryx" caption="Protarchaeopteryx, a little dinosaur of uncertain affinity from the Yixian Formation." %}
             </ul>
             <div>
                 <a href="/art/may-2020">Older Art</a>
