--- a/art/may-2020.html
+++ b/art/may-2020.html
@@ -34,7 +34,7 @@ title: Art Gallery
                 {% include image-caption.html imageurl="/assets/images/posts/linhenykus.png#wide" title="Linhenykus" caption="Linhenykus in the colors of a blue jay." %}
             </ul>
             <div>
-                <a href="/art/index">Back to Newer</a>
+                <a href="/art/summer">Back to Newer</a>
                 <a href="/art/april-2020">Older Art</a>
             </div><!-- .post-tags -->
         </div><!-- .entry-box -->
