--- a/art/index.html
+++ b/art/index.html
@@ -24,6 +24,8 @@ title: Art Gallery
                 {% include image-caption.html imageurl="/assets/images/posts/lystro.png#wide" title="Lystrosaurus" caption="Lystrosaurus, the Great Survivor." %}
                 
                 {% include image-caption.html imageurl="/assets/images/posts/caelestiventus.png#wide" title="Caelestiventus" caption="Caelestiventus, the early desert-dwelling pterosaur." %}
+
+                {% include image-caption.html imageurl="/assets/images/posts/revuelto.png#wide" title="Revueltosaurus" caption="Revueltosaurus, the small herbivorous pseudosuchian." %}
                 
             </ul>
             <div>
