--- a/art/index.html
+++ b/art/index.html
@@ -26,6 +26,8 @@ title: Art Gallery
                 {% include image-caption.html imageurl="/assets/images/posts/caelestiventus.png#wide" title="Caelestiventus" caption="Caelestiventus, the early desert-dwelling pterosaur." %}
 
                 {% include image-caption.html imageurl="/assets/images/posts/revuelto.png#wide" title="Revueltosaurus" caption="Revueltosaurus, the small herbivorous pseudosuchian." %}
+
+                {% include image-caption.html imageurl="/assets/images/posts/chile.png#wide" title="Chilesaurus" caption="Chilesaurus, the dinosaur of problematic affinity." %}
                 
             </ul>
             <div>
