--- a/art/summer.html
+++ b/art/summer.html
@@ -30,7 +30,7 @@ title: Art Gallery
                 {% include image-caption.html imageurl="/assets/images/posts/prot.png#wide" title="Protarchaeopteryx" caption="Protarchaeopteryx, a little dinosaur of uncertain affinity from the Yixian Formation." %}
             </ul>
             <div>
-                <a href="/art/index">Back to Newer</a>
+                <a href="/art/fall-2020">Back to Newer</a>
                 <a href="/art/may-2020">Older Art</a>
             </div><!-- .post-tags -->
         </div><!-- .entry-box -->
