--- a/art/index.html
+++ b/art/index.html
@@ -26,6 +26,8 @@ title: Art Gallery
                 {% include image-caption.html imageurl="/assets/images/posts/secodontosaurus.png#wide" title="Secodontosaurus" caption="A speculative Secodontosaurus mating ritual."%}
 
                 {% include image-caption.html imageurl="/assets/images/posts/silesaurus.png#wide" title="Silesaurus" caption="A couple of cursorial dinosauromorphs, Silesaurus."%}
+
+                {% include image-caption.html imageurl="/assets/images/posts/biarmosuchus.png#wide" title="Biarmosuchus" caption="The cold-blooded Middle Permian therapsid predator, Biarmosuchus, basks in the sun."%}
                 
             </ul>
             <div>
