--- a/art/winter2020.html
+++ b/art/winter2020.html
@@ -27,7 +27,7 @@ title: Art Gallery
                 
             </ul>
             <div>
-                <a href="/art/index">Back to Newer</a>
+                <a href="/art/summer-2021">Back to Newer</a>
                 <a href="/art/fall-2020">Older Art</a>
             </div><!-- .post-tags -->
         </div><!-- .entry-box -->
