--- a/art/summer-2021.html
+++ b/art/summer-2021.html
@@ -31,7 +31,7 @@ title: Art Gallery
                 
             </ul>
             <div>
-                <a href="/art/index">Back to Newer</a>
+                <a href="/art/winter-2022">Back to Newer</a>
                 <a href="/art/winter2020">Older Art</a>
             </div><!-- .post-tags -->
         </div><!-- .entry-box -->
