--- a/art/winter-2022.html
+++ b/art/winter-2022.html
@@ -35,7 +35,7 @@ title: Art Gallery
                 
             </ul>
             <div>
-                <a href="/art/index">Back to Newer</a>
+                <a href="/art/summer2022">Back to Newer</a>
                 <a href="/art/summer-2021">Older Art</a>
             </div><!-- .post-tags -->
         </div><!-- .entry-box -->
